# nlp-chatbot

./: .gitignore  README.md  app.py  evaluate.py  ingest.py  intent_model.plk  main.py  pyproject.toml  report.md  train.py
archive/: evaluate.py  intent_classifier.py  intents.json  preprocessing.py  train.py
archive/tests/: test_tools.py
chroma/: chroma.sqlite3
chroma_db/: chroma.sqlite3
data/: build_kings_docx.py  intents.json
experiments/: chunk_size_test.py
src/: chatbot.py  chunking.py  config.py  dialogue_manager.py  entity_extractor.py  figure_extractor.py  ingest.py  pdf_loader.py  rag_chain.py  reranker.py  retriever.py
