[project]
name = "nlp-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "langchain>=1.3.13",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "spacy>=3.8.13",
]
